reworked build process